--- a/Tasks/frontpage.html
+++ b/Tasks/frontpage.html
@@ -28,49 +28,42 @@
         <div class="logo">
           <img src="../images/tasklogo.png" alt="logo" />
         </div>
-        <div>
           <div class="icons">
-            <i class="fa fa-clock-o"></i>
+            <em class="fa fa-clock-o"></em>
           </div>
           <div class="icons">
-            <i class="material-symbols-outlined">
+            <em class="material-symbols-outlined">
               folder
-            </i>
+            </em>
           </div>
           <div class="icons">
-            <i class="fas">&#xf06d;</i>
+            <em class="fas">&#xf06d;</em>
           </div>
           <div class="icons">
-            <i class="fa fa-briefcase"></i>
+            <em class="fa fa-briefcase"></em>
             <span class="dot1"></span>
           </div>
           <div class="icons">
-            <i class="fa-regular fa-envelope"></i>
+            <em class="fa-regular fa-envelope"></em>
             <span class="dot2"></span>
           </div>
           <div class="icons">
-            <i class="material-symbols-outlined">
+            <em class="material-symbols-outlined">
               leaderboard
-            </i>
+            </em>
           </div>
           <div class="icons">
-            <i class="far fa-user-circle"></i>
+            <em class="far fa-user-circle"></em>
           </div>
         </div>
         <div class="image">
-          <div>
-            <img class="images" src="../images/neymar2.jpg" alt="image1" />
-          </div>
-          <div>
-            <img class="images" src="../images/neymar1.jpg" alt="image2" />
+            <img  src="../images/neymar2.jpg" alt="image1" />
+            <img  src="../images/neymar1.jpg" alt="image2" />
             <span class="dot4"></span>
-          </div>
-          <div>
-            <img class="images" src="../images/sanj.jpg" alt="image3" />
-          </div>
+            <img  src="../images/sanj.jpg" alt="image3" />
         </div>
         <div class="power">
-          <i class="fa fa-power-off"></i>
+          <em class="fa fa-power-off"></em>
         </div>
       </section>
       <section class="container2">
@@ -88,95 +81,116 @@
         <div class="graph">
           <img src="../images/graph1.png" alt="graph1" />
         </div>
-        <div>
           <h3 class="heading">Quick Action</h3>
           <section class="menu">
             <div class="menu1">
-              <i
+              <span class="hand">
+                <em
                 class="fas fa-hand-holding-usd"
-              ></i>
+              ></em>
+              </span>
               <p>Bank AC</p>
             </div>
             <div class="menu1">
-              <i
-                class="fas fa-laptop"
-              ></i>
+              <span class="laptop">
+                <em
+                  class="fas fa-laptop"
+                ></em>
+              </span>
               <p>Top Up</p>
             </div>
             <div class="menu1">
-              <i
+              <span class="building">
+              <em
                 class="far fa-building"
-              ></i>
+              ></em>
+              </span>
               <p>Find ATM</p>
             </div>
             <div class="menu1">
-              <i
+              <span class="bank">
+              <em
                 class="fa fa-bank"
-              ></i>
+              ></em>
+              </span>
               <p>Bank AC</p>
             </div>
             <div class="menu1">
-              <i
+              <span class="columns">
+               <em
                 class="fas fa-columns"
-              ></i>
+              ></em>
+              </span>
               <p>Bank AC</p>
             </div>
             <div class="menu1">
-              <i class="fas fa-book" ></i>
+              <span class="book">
+              <em class="fas fa-book" ></em>
+             </span>
               <p>Transfer</p>
             </div>
             <div class="menu1">
-              <i
+              <span class="credit">
+              <em
                 class="fas fa-credit-card"
-              ></i>
+              ></em>
+              </span>
               <p>Cards</p>
             </div>
             <div class="menu1">
-              <i
+              <span class="money-bill-alt">
+              <em
                 class="far fa-money-bill-alt"
-              ></i>
+              ></em>
+              </span>
               <p>Pay Bill</p>
             </div>
             <div class="menu1">
-              <i
+              <span class="money-bill">
+              <em
                 class="fas fa-money-bill"
-              ></i>
+              ></em>
+              </span>
               <p>Payment</p>
             </div>
             <div class="menu1">
-              <i
+              <span class="amazon">
+              <em
                 class="fab fa-amazon-pay"
-              ></i>
+              ></em>
+            </span>
               <p>Bank AC</p>
             </div>
             <div class="menu1">
-              <i
+              <span class="donate">
+              <em
                 class="fas fa-donate"
-              ></i>
+              ></em>
+            </span>
               <p>Withdraw</p>
             </div>
             <div class="menu1">
-              <i
+              <span class="tags">
+              <em
                 class="fas fa-tags"
-              ></i>
+              ></em>
+            </span>
               <p>Voucher</p>
             </div>
           </section>
-        </div>
       </section>
       <section class="container3">
-        <div class="top-heading2">
+        <div class="top-heading">
           <h3>History & Activity</h3>
         </div>
         <div class="wallet">
           <p>Current Balance</p>
           <div class="price1">
-            <div>
-              <i class="fa fa-wallet">
-                <span class="price2">$3,102.48</span>
-              </i>
+            <div class="wallet1">
+              <em class="fa fa-wallet">
+              </em>
+              <span class="price2">$3,102.48</span>
             </div>
-            <div >
               <select class="options">
                 <option value="USD" selected="selected">USD</option>
                 <option value="EUR">EUR</option>
@@ -185,7 +199,6 @@
                 <option value="ARP">ARP</option>
                 <option value="AUD">AUD</option>
               </select>
-            </div>
           </div>
         </div>
         <div class="activity">
@@ -211,7 +224,7 @@
               <option value="">Level3</option>
             </select>
           </div>
-          <section class="card">
+          <div class="card">
             <div class="col1">
               <div class="logo-img">
                 <img src="../images/logo1.png" alt="logo1" />
@@ -225,25 +238,21 @@
               </div>
             </div>
             <div class="col2">
-              <div>
-                <i class="fa fa-clock" class="clock" ></i
+              <div  class="clock" >
+                <em class="fa fa-clock"></em
                 ><span>2days ago</span>
-                <div>
-                  <i class="far fa-star" ></i
+                <div class="star">
+                  <em class="far fa-star" ></em
                   ><span>4,4(1,420rating)</span>
                 </div>
               </div>
-
-              <div>
                 <button type="button" class="button">Details</button>
-              </div>
             </div>
-          </section>
-          <section class="card">
+          </div>
+          <div class="card">
             <div class="col1">
               <div class="logo-img">
                 <img src="../images/logo2.png" alt="logo2" />
-
                 <div>
                   <span>Jane C.</span>
                   <div class="btc">TRE</div>
@@ -254,25 +263,21 @@
               </div>
             </div>
             <div class="col2">
-              <div>
-                <i class="fa fa-clock" class="clock"></i
+              <div class="clock">
+                <em class="fa fa-clock" ></em
                 ><span>4 days ago</span>
-                <div>
-                  <i class="far fa-star" ></i
+                <div class="star">
+                  <em class="far fa-star" ></em
                   ><span>4,3(1,223rating)</span>
                 </div>
               </div>
-
-              <div>
                 <button type="button" class="button">Details</button>
-              </div>
             </div>
-          </section>
-          <section class="card">
+          </div>
+          <div class="card">
             <div class="col1">
               <div class="logo-img">
                 <img src="../images/logo3.png" alt="logo3" />
-
                 <div>
                   <span>Jenny W.</span>
                   <div class="btc">DOE</div>
@@ -283,22 +288,20 @@
               </div>
             </div>
             <div class="col2">
-              <div>
-                <i  class="fa fa-clock" ></i
+              <div class="clock">
+                <em  class="fa fa-clock" ></em
                 ><span>13 days ago</span>
-                <div>
-                  <i class="far fa-star" ></i
+                <div class="star">
+                  <em class="far fa-star" ></em
                   ><span>3,8(879rating)</span>
                 </div>
               </div>
-              <div>
                 <button type="button" class="button">Details</button>
-              </div>
             </div>
-          </section>
+          </div>
         </div>
         <div>
-          <p class="heading">History</p>
+          <h3 class="heading">History</h3>
         </div>
         <div class="history">
           <div class="his-card">
@@ -319,17 +322,21 @@
       </section>
       <section class="container4">
         <div class="nav">
-          <i class="fa fa-gear"></i>
-          <i class='far fa-bell'><span class="dot3"></span></i>
+          <span class="gear">
+          <em class="fa fa-gear"></em>
+          </span>
+          <span class="bell1">
+          <em class='far fa-bell'><span class="dot3"></span></em>
+          </span>
           <div class="search-container">
-            <i
+            <em
               class="fa fa-search"
-            ></i>
-
+            ></em>
             <input type="text" placeholder="Search Dashboard" name="search" />
           </div>
-          <i class="fas fa-sliders-h" style="font-size: 20px; color: black"></i>
-
+          <span class="slider">
+          <em class="fas fa-sliders-h"></em>
+          </span>
           <div class="profile">
             <img src="../images/neymar4.jpg" alt="profile" />
           </div>
@@ -360,10 +367,10 @@
             <img src="../images/graph3.png" alt="graph img" />
           </div>
           <div>
-            <p class="heading2">Recent Activity</p>
+            <h3 class="heading2">Recent Activity</h3>
           </div>
           <section class="cards">
-            <section class="card1">
+            <div class="card1">
               <div class="card-row1">
                 <div>Extra Spending</div>
                 <div class="sup">
@@ -380,8 +387,8 @@
                 <button type="button" class="button3"></button
                 ><span class="btn-spn">March $2,040</span>
               </div>
-            </section>
-            <section class="card2">
+            </div>
+            <div class="card2">
               <div class="card-row1">
                 <div>Extra Spending</div>
                 <div  class="sup">
@@ -398,9 +405,9 @@
                 <button type="button" class="button3"></button
                 ><span class="btn-spn">March $2,040</span>
               </div>
-            </section>
+            </div>
             <section class="card3">
-              <section class="inside-card1">
+              <div class="inside-card1">
                 <div>
                   <img src="../images/income graph.png" alt="income graph" />
                 </div>
@@ -408,8 +415,8 @@
                   <p>Income Monthly</p>
                   <div class="income1">+$175.14</div>
                 </div>
-              </section>
-              <section class="inside-card2">
+              </div>
+              <div class="inside-card2">
                 <div>
                   <img src="../images/expense graph.png" alt="expense graph" />
                 </div>
@@ -417,8 +424,8 @@
                   <p>Expenses Monthly</p>
                   <div class="income2">-$246.14</div>
                 </div>
-              </section>
-              <section class="inside-card3">
+              </div>
+              <div class="inside-card3">
                 <div>
                   <img src="../images/revenue graph.png" alt="revenue graph" />
                 </div>
@@ -426,7 +433,7 @@
                   <p>Revenue Monthly</p>
                   <div class="income3">$147.147</div>
                 </div>
-              </section>
+              </div>
             </section>
           </section>
         </div>
