--- a/Tasks/frontpage.html
+++ b/Tasks/frontpage.html
@@ -192,12 +192,12 @@
               <span class="price2">$3,102.48</span>
             </div>
               <select class="options">
-                <option value="USD" selected="selected">USD</option>
-                <option value="EUR">EUR</option>
-                <option value="GBP">GBP</option>
-                <option value="DZD">DZD</option>
-                <option value="ARP">ARP</option>
-                <option value="AUD">AUD</option>
+                <option class="dropdown"selected="selected">USD</option>
+                <option class="dropdown">EUR</option>
+                <option class="dropdown">GBP</option>
+                <option class="dropdown">DZD</option>
+                <option class="dropdown">ARP</option>
+                <option class="dropdown">AUD</option>
               </select>
           </div>
         </div>
