--- a/Tasks/frontpage.html
+++ b/Tasks/frontpage.html
@@ -19,14 +19,15 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
-    <link rel="stylesheet" href="./frontpage.css" />
+    <link href="fontpage.less" rel="stylesheet/less" type="text/css">
+    <script src="less-min.js" type="text/javascript"></script>
     <title>Web page</title>
   </head>
   <body>
     <section class="main-container">
       <section class="container1">
         <div class="logo">
-          <img src="../images/tasklogo.png" alt="logo" />
+          <img  src="../images/tasklogo.png" alt="logo" /><span class="logoname">Logo</span> 
         </div>
           <div class="icons">
             <em class="fa fa-clock-o"></em>
@@ -74,7 +75,7 @@
           <h3>Bitcoin</h3>
           <div class="liveprice">
             <div class="heading1">Current Price</div>
-            <div class="liveprice1">$10,197.30</div id="liveprice">
+            <div class="liveprice1">$10,197.30</div>
             <div class="decreasing-price">-1.71% <span>this week</span></div>
           </div>
         </div>
@@ -204,20 +205,20 @@
         <div class="activity">
           <h3>Recent Activity</h3>
           <p>Filter by:</p>
-          <div class="options2">
-            <select class="options1">
+          <div class="options1">
+            <select class="options2">
               <option value="Sent" selected="selected">Sent</option>
               <option value="">Sent1</option>
               <option value="">Sent2</option>
               <option value="">Sent3</option>
             </select>
-            <select class="options1">
+            <select class="options2">
               <option value="Currency" selected="selected">Currency</option>
               <option value="EUR">EUR</option>
               <option value="GBP">GBP</option>
               <option value="DZD">DZD</option>
             </select>
-            <select class="options1">
+            <select class="options2">
               <option value="all" selected="selected">All level</option>
               <option value="">Level1</option>
               <option value="">Level2</option>
@@ -338,7 +339,7 @@
           <em class="fas fa-sliders-h"></em>
           </span>
           <div class="profile">
-            <img src="../images/neymar4.jpg" alt="profile" />
+            <img src="../images/neymar4.jpg" alt="profile" /><span class="proname">Sanjeev</span>
           </div>
         </div>
         <div class="container5">
@@ -348,13 +349,11 @@
                 <img src="../images/b.png" alt="logo3" /><div class="bitcoin">Bitcoin <span >BTC</span></div
                 >
               </div>
-              <div class="doller2">
                 <div  class="doller2">
                   $57,660.35
                   <span ><sub>+2.84%</sub></span>
                 </div>
-              </div>
-            </div>
+            </div>  
             <div class="currency">
               <button type="button">1H</button>
               <button type="button">24H</button>
@@ -372,7 +371,7 @@
           <section class="cards">
             <div class="card1">
               <div class="card-row1">
-                <div>Extra Spending</div>
+                <div class="spending">Extra Spending</div>
                 <div class="sup">
                   <sup>$</sup>8,790
                 </div>
@@ -390,7 +389,7 @@
             </div>
             <div class="card2">
               <div class="card-row1">
-                <div>Extra Spending</div>
+                <div class="spending1">Extra Spending</div>
                 <div  class="sup">
                   <sup>$</sup>8,790
                 </div>
