--- a/Tasks/frontpage.html
+++ b/Tasks/frontpage.html
@@ -381,10 +381,14 @@
                 <img src="../images/ins graph.png" alt="ins graph" />
               </div>
               <div class="card-row2">
-                <button type="button" class="button2"></button
-                ><span class="btn-spn">This Month $2,450</span>
+                <div>
+                  <button type="button" class="button2"></button
+                    ><span class="btn-spn">This Month $2,450</span>
+                </div>
+                <div>   
                 <button type="button" class="button3"></button
-                ><span class="btn-spn">March $2,040</span>
+                  ><span class="btn-spn">March $2,040</span>
+                </div>
               </div>
             </div>
             <div class="card2">
@@ -399,10 +403,14 @@
                 <img src="../images/ins graph2.png" alt="ins graph" />
               </div>
               <div class="card-row2">
-                <button type="button" class="button2"></button
-                ><span class="btn-spn">This Month $2,450</span>
+                <div>
+                  <button type="button" class="button2"></button
+                    ><span class="btn-spn">This Month $2,450</span>
+                </div>
+                <div>   
                 <button type="button" class="button3"></button
-                ><span class="btn-spn">March $2,040</span>
+                  ><span class="btn-spn">March $2,040</span>
+                </div>
               </div>
             </div>
             <section class="card3">
