--- a/Tasks/frontpage.html
+++ b/Tasks/frontpage.html
@@ -344,7 +344,7 @@
         </div>
         <div class="container5">
           <div class="col3">
-            <div>
+            <div class="bit-co">
               <div class="image-bit">
                 <img src="../images/b.png" alt="logo3" /><div class="bitcoin">Bitcoin <span >BTC</span></div
                 >
@@ -428,7 +428,7 @@
                   <img src="../images/expense graph.png" alt="expense graph" />
                 </div>
                 <div>
-                  <p>Expenses Monthly</p>
+                  <p>Expense Monthly</p>
                   <div class="income2">-$246.14</div>
                 </div>
               </div>
